2005-11-07  Kevin P. Fleming  <kpfleming@digium.com>

	* apps/app_playback.c: upgrade to new arg/option API and implement priority jumping control

	* apps/app_privacy.c: upgrade to new arg/option API and implement priority jumping control

	* apps/app_sendtext.c: upgrade to new arg/option API and implement priority jumping control

	* apps/app_transfer.c: upgrade to new arg/option API and implement priority jumping control

	* apps/app_txtcidname.c: upgrade to new arg/option API and implement priority jumping control

	* Makefile: restore function of 'dont-optimize'

	* config.c (config_text_file_load): don't generate log message when stat() fails

	* many files: clean up application documentation to not refer to return values, since they cannot be used in the dialplan (work done by Neil Lewis)

2005-11-06  Russell Bryant <russell@digium.com>

	* many files: alphabetize options in applicaiton descriptions
	* channels/chan_iax2.c: Use an enum to define iax peer/user flags as well as the pvt structure state.  Use the ast_flags macros for checking or setting the state.
	* sounds.txt: Add missing words from the description of the vm-opts prompt
	* apps/app_externalivr.c: Add a space that fixes building on older versions of gcc
	* many files: Add doxygen updates to categorize modules into groups. Convert a lot of comments over to doxygen style. Add some text giving a basic overview of channels.
	* many files: Update applications to add an exit status variable, make priority jumping optional, and use new args parsing macros
	* pbx.c cdr.c res/res_features.c apps/app_dial.c include/asterisk/cdr.h: Convert some built-in applications to use new args parsing macros.  Change ast_cdr_reset to take a pointer to an ast_flags structure instead of an integer for flags.
	* channels/chan_agent.c: Don't loop forever on an invalid options string
	* apps/app_disa.c apps/app_forkcdr.c: Fix to use correct arguments to ast_cdr_reset

2005-11-05  Kevin P. Fleming  <kpfleming@digium.com>
